--- a/unidad 2/(7) Imágenes y background/7a.html
+++ b/unidad 2/(7) Imágenes y background/7a.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <meta charset="utf-8">
+    <title>Madrid</title>
     <style>
-        #2{
-            
+        body {
+            margin: 0;
+            background-image: url("madrid.jpg");
+            background-repeat: repeat;
+        }
+
+        #logo {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            width: 150px;
         }
     </style>
 </head>
 <body>
-    <img src="logo.png" alt="" id="1">
-    <img src="madrid.jpg" alt="" id="2">
-    
+
+    <img src="logo.png" id="logo">
+
 </body>
 </html>
